# object-detector

./: .gitignore  NOTES.md  README.md  experiments.ipynb  object_detect.py  pyproject.toml  requirements.txt
post_processing_tools/efficientdet/: Readme.md  detect.py  requirements.txt
post_processing_tools/ultralytics/: .gitignore  Readme.md  pyproject.toml  stats.py  ultra-detection.py  ultra-pose.py  ultra-process.py  ultra-segmentation.py  yolov8_classes.json
post_processing_tools/yolov8/: .gitignore  playground.ipynb  process_video.py  pyproject.toml  wrapper.py
recording/: README.md
src/detect/: modelfiles.py  object_detect.py
